# cookiecutter-flask-minimal

./: .gitignore  MANIFEST.in  Makefile  README.md  cookiecutter.json  setup.py  test-config-setuptools.json  test-config-uv.json  test-config.json
hooks/: post_gen_project.py
yourapplication/: __init__.py  views.py
yourapplication/templates/: index.html
{{cookiecutter.package_name}}/: .gitignore  MANIFEST.in  Makefile  README.md  pyproject.toml  setup.cfg  setup.py
{{cookiecutter.package_name}}/tests/: test_{{cookiecutter.package_name}}.py
{{cookiecutter.package_name}}/{{cookiecutter.package_name}}/: __init__.py  default_settings.py  logging.py  views.py
{{cookiecutter.package_name}}/{{cookiecutter.package_name}}/static/: styles.css
{{cookiecutter.package_name}}/{{cookiecutter.package_name}}/templates/: index.html
