{%- if cookiecutter.use_poetry == 'y' -%}
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "{{cookiecutter.package_name}}"
version = "1.0.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
include = ["**/static/**/*", "**/templates/**/*"]

[tool.poetry.dependencies]
python = ">=3.10,<4"
flask = ">=3.1.2,<4"

[tool.poetry.group.dev.dependencies]
pytest = ">=9,<10"
{%- if cookiecutter.use_flake8 == 'y' %}
flake8 = ">=7,<8"{% endif %}
{%- if cookiecutter.use_black == 'y' %}
black = ">=25.11.0,<26"{% endif %}
{%- if cookiecutter.use_black == 'y' and cookiecutter.use_isort == 'y' %}
isort = ">=7,<8"{% endif %}
{%- if cookiecutter.use_mypy == 'y' %}
mypy = ">=1.18.2,<2"{% endif %}
{%- else -%}
[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "{{cookiecutter.package_name}}"
version = "1.0.0"
requires-python = ">=3.8.1,<4"
dependencies = [
    "Flask>=3.0.2,<4",
]

[project.optional-dependencies]
dev = [
    "pytest>=9,<10",
    {%- if cookiecutter.use_flake8 == 'y' %}
    "flake8>=7,<8",{% endif %}
    {%- if cookiecutter.use_black == 'y' %}
    "black>=25.11.0,<26",{% endif %}
    {%- if cookiecutter.use_black == 'y' and cookiecutter.use_isort == 'y' %}
    "isort>=7,<8",{% endif %}
    {%- if cookiecutter.use_mypy == 'y' %}
    "mypy>=1.18.2,<2",{% endif %}
]

[tool.setuptools.package-data]
"*" = ["**/static/**/*", "**/templates/**/*"]
{%- endif %}

[tool.pytest.ini_options]
testpaths = ["tests"]

{%- if cookiecutter.use_black == 'y' %}

[tool.black]
line-length = 88
{%- endif %}
{%- if cookiecutter.use_black == 'y' and cookiecutter.use_isort == 'y' %}

[tool.isort]
profile = "black"
{%- endif %}
{%- if cookiecutter.use_mypy == 'y' %}

[tool.mypy]
ignore_missing_imports = true
files = "{{cookiecutter.package_name}},tests"
{%- endif %}
