[project]
name = "{{cookiecutter.package_name}}"
version = "1.0.0"
readme = "README.md"
requires-python = ">=3.10.20,<4"
dependencies = [
    "Flask>=3.1.3,<4",
]

{% if cookiecutter.use_uv == 'y' -%}
[dependency-groups]
dev = [
    "pytest>=9,<10",
    {%- if cookiecutter.use_ruff == 'y' %}
    "ruff>=0.15,<1",{% endif %}
    {%- if cookiecutter.use_mypy == 'y' %}
    "mypy>=1,<2",{% endif %}
]

[tool.uv]
package = true
{%- else %}
[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = [
    "pytest>=9,<10",
    {%- if cookiecutter.use_ruff == 'y' %}
    "ruff>=0.15,<1",{% endif %}
    {%- if cookiecutter.use_mypy == 'y' %}
    "mypy>=1,<2",{% endif %}
]

[tool.setuptools.package-data]
"*" = ["**/static/**/*", "**/templates/**/*"]
{%- endif %}

[tool.pytest.ini_options]
testpaths = ["tests"]

{%- if cookiecutter.use_ruff == 'y' %}

[tool.ruff]
line-length = 88

{%- endif %}
{%- if cookiecutter.use_mypy == 'y' %}

[tool.mypy]
ignore_missing_imports = true
files = "{{cookiecutter.package_name}},tests"
{%- endif %}
